--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-slider-component": "^3.2.24"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
