--- a/libraryPlusPlus/pom.xml
+++ b/libraryPlusPlus/pom.xml
@@ -76,6 +76,16 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version> <!-- Поточна версія jjwt -->
 		</dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.4</version> <!-- Перевірте актуальну версію на офіційному сайті Apache POI -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.4</version>
+        </dependency>
 <!--		<dependency>-->
 <!--			<groupId>io.jsonwebtoken</groupId>-->
 <!--			<artifactId>jjwt-api</artifactId>-->
