--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -8,13 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^7.2.2",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue-slider-component": "^3.2.24"
+    "vue-slider-component": "^3.2.24",
+    "vuex": "^4.1.0",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
