--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
+    "notiflix": "^3.2.6",
     "vue": "^3.2.13",
+    "vue-multiselect": "^2.1.8",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^3.2.24",
     "vuex": "^4.1.0",
