--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueform/slider": "^2.1.9",
     "@vuepic/vue-datepicker": "^7.2.2",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
@@ -16,7 +17,7 @@
     "moment": "^2.29.4",
     "notiflix": "^3.2.6",
     "vue": "^3.2.13",
-    "vue-multiselect": "^2.1.8",
+    "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^3.2.24",
     "vuex": "^4.1.0",
