--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@vueform/slider": "^2.1.9",
     "@vuepic/vue-datepicker": "^7.2.2",
     "bootstrap": "^5.3.2",
