generate library card

--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -17,6 +17,7 @@
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "notiflix": "^3.2.6",
+    "qrcode-vue3": "^1.6.8",
     "vue": "^3.2.13",
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.0.3",
