add diagram for genre

--- a/libraryPlusPlus/pom.xml
+++ b/libraryPlusPlus/pom.xml
@@ -86,7 +86,13 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.4</version>
         </dependency>
-<!--		<dependency>-->
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+
+        <!--		<dependency>-->
 <!--			<groupId>io.jsonwebtoken</groupId>-->
 <!--			<artifactId>jjwt-api</artifactId>-->
 <!--			<version>0.10.5</version>-->
