--- a/libraryplusplus-vue/package.json
+++ b/libraryplusplus-vue/package.json
@@ -13,12 +13,14 @@
     "@vuepic/vue-datepicker": "^7.2.2",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "notiflix": "^3.2.6",
     "qrcode-vue3": "^1.6.8",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^3.2.24",
